[project]
name = "agent-sdk-exp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan-Wu-juniper",email = "ethan@gliacloud.com"}
]
readme = "README.md"
requires-python = "=3.11.10"
dependencies = [
    "openai-agents (>=0.0.3,<0.0.4)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph-swarm (>=0.0.5,<0.0.6)",
    "langchain-openai (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
